working on ie fix

--- a/wp-content/themes/canopytheme/sass/homepage.scss
+++ b/wp-content/themes/canopytheme/sass/homepage.scss
@@ -625,3 +625,38 @@ h1 {
         }
     }
 }
+
+
+//IE styles only
+#ie-canopy-theme {
+    background-image: url(/images/logos/palms.jpg);
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    position: relative;
+}
+
+#ie-title-logo {
+    position: absolute;
+    height: 200px;
+    margin: 0 auto;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+
+.coming-soon {
+    position: absolute;
+    bottom: 100px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 100;
+}
+
+.coming-soon-text {
+    color: white;
+    font-size: 1.3em;
+}
